--- a/function-runner/pom.xml
+++ b/function-runner/pom.xml
@@ -19,6 +19,12 @@
             <version>6.1.4-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>33.0.0-jre</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
 
