--- a/function-runner/pom.xml
+++ b/function-runner/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>lu.nyo</groupId>
-        <artifactId>core</artifactId>
+        <artifactId>tool-set</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <artifactId>function-runner</artifactId>
