--- a/pom.xml
+++ b/pom.xml
@@ -2,19 +2,21 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>lu.nyo</groupId>
-    <artifactId>core</artifactId>
+    <artifactId>tool-set</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
-    <name>Core Libraries</name>
+    <name>Tool Set Libraries</name>
     <url>http://maven.apache.org</url>
     <properties>
         <maven.compiler.target>21</maven.compiler.target>
         <maven.compiler.source>21</maven.compiler.source>
-        <spring.boot.version>3.3.0-SNAPSHOT</spring.boot.version>
     </properties>
     <modules>
         <module>function-runner</module>
         <module>web-flux-starter</module>
+        <module>utils</module>
+        <module>springboot-application-properties-js</module>
+        <module>demo</module>
     </modules>
 
     <dependencies>
@@ -36,6 +38,7 @@
             <version>5.9.0</version>
             <scope>test</scope>
         </dependency>
+
     </dependencies>
     <build>
         <plugins>
