--- a/web-flux-starter/pom.xml
+++ b/web-flux-starter/pom.xml
@@ -3,16 +3,16 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>lu.nyo</groupId>
-        <artifactId>core</artifactId>
+        <artifactId>tool-set</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <groupId>org.example</groupId>
     <artifactId>web-flux-starter</artifactId>
-    <name>Web Flux Started</name>
-    <url>http://maven.apache.org</url>
-
+    <name>Tool Set - Web Flux Started</name>
     <properties>
         <java.version>21</java.version>
+        <spring.boot.version>3.3.0-SNAPSHOT</spring.boot.version>
+        <projectreactor.version>3.6.3-SNAPSHOT</projectreactor.version>
+        <actuator.version>3.1.2</actuator.version>
     </properties>
     <dependencies>
         <dependency>
@@ -37,15 +37,14 @@
             <groupId>io.projectreactor</groupId>
             <artifactId>reactor-test</artifactId>
             <scope>test</scope>
-            <version>3.6.3-SNAPSHOT</version>
+            <version>${projectreactor.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
-            <version>3.1.2</version>
+            <version>${actuator.version}</version>
         </dependency>
     </dependencies>
-
     <build>
         <plugins>
             <plugin>
