--- a/app-dependency-management/app-starter/pom.xml
+++ b/app-dependency-management/app-starter/pom.xml
@@ -3,56 +3,38 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>lu.nyo</groupId>
-        <artifactId>tool-set</artifactId>
+        <artifactId>app-dependency-management</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <artifactId>web-flux-starter</artifactId>
-    <name>Tool Set - Web Flux Started</name>
-    <properties>
-        <java.version>21</java.version>
-        <spring.boot.version>3.3.0-SNAPSHOT</spring.boot.version>
-        <projectreactor.version>3.6.3-SNAPSHOT</projectreactor.version>
-        <actuator.version>3.1.2</actuator.version>
-    </properties>
+    <artifactId>app-starter</artifactId>
+    <name>Tool Set - Spring Webflux Springboot Application</name>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-webflux</artifactId>
-            <version>${spring.boot.version}</version>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
             <optional>true</optional>
-            <version>${spring.boot.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
-            <version>${spring.boot.version}</version>
         </dependency>
         <dependency>
             <groupId>io.projectreactor</groupId>
             <artifactId>reactor-test</artifactId>
             <scope>test</scope>
-            <version>${projectreactor.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
-            <version>${actuator.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
     </dependencies>
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>${spring.boot.version}</version>
-            </plugin>
-        </plugins>
-    </build>
-
 </project>
