--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -6,14 +6,12 @@
         <artifactId>tool-set</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <groupId>org.example</groupId>
     <artifactId>demo</artifactId>
     <name>Tool Set - Project Demo</name>
-    <url>http://maven.apache.org</url>
     <dependencies>
         <dependency>
             <groupId>lu.nyo</groupId>
-            <artifactId>app-dependency-management</artifactId>
+            <artifactId>app-starter</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
