--- a/app-dependency-management/data-starter/pom.xml
+++ b/app-dependency-management/data-starter/pom.xml
@@ -8,6 +8,7 @@
     </parent>
     <artifactId>data-starter</artifactId>
     <name>Tool Set - Spring Data Interaction</name>
+    <packaging>pom</packaging>
     <dependencies>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
