--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -12,12 +12,12 @@
         <dependency>
             <groupId>lu.nyo</groupId>
             <artifactId>app-starter</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>lu.nyo</groupId>
             <artifactId>springboot-application-properties-js</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 </project>
