--- a/function-runner/pom.xml
+++ b/function-runner/pom.xml
@@ -14,18 +14,15 @@
     </properties>
     <dependencies>
         <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-beans</artifactId>
-            <version>6.1.4-SNAPSHOT</version>
-            <scope>provided</scope>
+            <groupId>lu.nyo</groupId>
+            <artifactId>utils</artifactId>
+            <version>${version}</version>
         </dependency>
         <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-            <version>33.0.0-jre</version>
-            <scope>provided</scope>
+            <groupId>lu.nyo</groupId>
+            <artifactId>test-starter</artifactId>
+            <version>${version}</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
-
-
 </project>
