--- a/springboot-application-properties-js/pom.xml
+++ b/springboot-application-properties-js/pom.xml
@@ -8,30 +8,31 @@
     </parent>
     <artifactId>springboot-application-properties-js</artifactId>
     <name>Tool Set - Spring Boot Properties as JavaScript</name>
-    <url>http://maven.apache.org</url>
     <dependencies>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot</artifactId>
-            <version>3.3.0-SNAPSHOT</version>
-            <scope>provided</scope>
+            <groupId>lu.nyo</groupId>
+            <artifactId>app-starter</artifactId>
+            <version>${version}</version>
         </dependency>
         <dependency>
             <groupId>org.graalvm.polyglot</groupId>
             <artifactId>polyglot</artifactId>
-            <version>23.1.2</version>
-        </dependency>
-        <dependency>
-            <groupId>org.graalvm.polyglot</groupId>
-            <artifactId>js</artifactId>
-            <version>23.1.2</version>
-            <type>pom</type>
         </dependency>
         <dependency>
             <groupId>lu.nyo</groupId>
             <artifactId>utils</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <scope>compile</scope>
+            <version>${version}</version>
         </dependency>
     </dependencies>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>lu.nyo</groupId>
+                <artifactId>app-dependency-management</artifactId>
+                <scope>import</scope>
+                <type>pom</type>
+                <version>${version}</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 </project>
