--- a/app-dependency-management/app-starter/pom.xml
+++ b/app-dependency-management/app-starter/pom.xml
@@ -7,7 +7,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <artifactId>app-starter</artifactId>
-    <name>Tool Set - Spring Webflux Springboot Application</name>
+    <name>Spring Webflux Springboot Application</name>
     <packaging>pom</packaging>
     <dependencies>
         <dependency>
@@ -28,4 +28,12 @@
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 </project>
