--- a/app-dependency-management/data-starter/pom.xml
+++ b/app-dependency-management/data-starter/pom.xml
@@ -7,7 +7,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <artifactId>data-starter</artifactId>
-    <name>Tool Set - Spring Data Interaction</name>
+    <name>Spring Data Interaction</name>
     <packaging>pom</packaging>
     <dependencies>
         <dependency>
@@ -43,12 +43,6 @@
                     <groupId>mysql</groupId>
                     <artifactId>mysql-connector-java</artifactId>
                     <version>8.0.28</version>
-                    <exclusions>
-                        <exclusion>
-                            <groupId>com.google.protobuf</groupId>
-                            <artifactId>protobuf-java</artifactId>
-                        </exclusion>
-                    </exclusions>
                 </dependency>
             </dependencies>
         </profile>
