--- a/app-dependency-management/pom.xml
+++ b/app-dependency-management/pom.xml
@@ -7,7 +7,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <artifactId>app-dependency-management</artifactId>
-    <name>Tool Set - Application Dependencies BOM</name>
+    <name>Application Dependencies BOM</name>
     <packaging>pom</packaging>
     <properties>
         <java.version>21</java.version>
