--- a/app-dependency-management/test-starter/pom.xml
+++ b/app-dependency-management/test-starter/pom.xml
@@ -7,7 +7,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <artifactId>test-starter</artifactId>
-    <name>Tool Set - Test Dependencies</name>
+    <name>Test Dependencies</name>
     <packaging>pom</packaging>
     <dependencies>
         <dependency>
