--- a/function-runner/pom.xml
+++ b/function-runner/pom.xml
@@ -7,7 +7,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <artifactId>function-runner</artifactId>
-    <name>Tool Set - Function Runner</name>
+    <name>Function Runner</name>
     <properties>
         <maven.compiler.target>21</maven.compiler.target>
         <maven.compiler.source>21</maven.compiler.source>
