--- a/springboot-application-properties-js/pom.xml
+++ b/springboot-application-properties-js/pom.xml
@@ -7,7 +7,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <artifactId>springboot-application-properties-js</artifactId>
-    <name>Tool Set - Spring Boot Properties as JavaScript</name>
+    <name>Spring Boot Properties as JavaScript</name>
     <dependencies>
         <dependency>
             <groupId>lu.nyo</groupId>
