--- a/springboot-application-starter/pom.xml
+++ b/springboot-application-starter/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
@@ -6,18 +7,14 @@
         <artifactId>tool-set</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <artifactId>demo</artifactId>
-    <name>Tool Set - Project Demo</name>
+    <groupId>fr.nyo</groupId>
+    <artifactId>springboot-application-starter</artifactId>
+    <name>SpringBoot Application Starter</name>
     <dependencies>
         <dependency>
             <groupId>lu.nyo</groupId>
             <artifactId>app-starter</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>lu.nyo</groupId>
-            <artifactId>springboot-application-properties-js</artifactId>
-            <version>${project.version}</version>
+            <version>${version}</version>
         </dependency>
     </dependencies>
 </project>
