--- a/utils/pom.xml
+++ b/utils/pom.xml
@@ -7,8 +7,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <artifactId>utils</artifactId>
-    <name>Tool Set - Utils</name>
-    <url>http://maven.apache.org</url>
+    <name>Utils</name>
     <dependencies>
         <dependency>
             <groupId>org.apache.commons</groupId>
