Optimization Excel Render with SXSSF + Minor Correction

--- a/core/utils/pom.xml
+++ b/core/utils/pom.xml
@@ -8,6 +8,7 @@
     </parent>
     <artifactId>utils</artifactId>
     <name>Utils</name>
+    <packaging>jar</packaging>
     <dependencies>
         <dependency>
             <groupId>org.apache.commons</groupId>
