--- a/springboot-service-composer/pom.xml
+++ b/springboot-service-composer/pom.xml
@@ -6,7 +6,13 @@
         <artifactId>tool-set</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <artifactId>workflow-api</artifactId>
-    <name>Archetype - workflow-api</name>
-    <url>http://maven.apache.org</url>
+    <artifactId>springboot-service-composer</artifactId>
+    <name>SpringBoot Service Composer</name>
+    <dependencies>
+        <dependency>
+            <groupId>lu.nyo</groupId>
+            <artifactId>app-starter</artifactId>
+            <version>${version}</version>
+        </dependency>
+    </dependencies>
 </project>
