--- a/app-dependency-management/test-starter/pom.xml
+++ b/app-dependency-management/test-starter/pom.xml
@@ -46,5 +46,11 @@
             <scope>test</scope>
             <artifactId>junit-jupiter-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>6.1.6</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
